k8s/apps/atuin/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: atuin
    app.kubernetes.io/instance: atuin
  name: atuin
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
    - name: metrics
      port: 9001
      protocol: TCP
      targetPort: metrics
  selector:
    app.kubernetes.io/name: atuin
    app.kubernetes.io/instance: atuin
